--- a/css/movie_list.scss
+++ b/css/movie_list.scss
@@ -126,6 +126,7 @@ main{position: relative;}
             position: relative;
             padding: 40px 0 0 0;
             .show_img{
+                cursor: pointer;
                 display: block;
                 width: 100%;
                 margin: 0;
